# tether

./: .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  pyproject.toml  render.yaml  requirements-deploy.txt  run_redteam.py  tether  tether.bak
anime/: index.html
core/: prompt.txt
serious/: index.html
sovereignty/: CURRENT_STATUS.md  README.md  SOVEREIGNTY_PROGRESS.md  SOVEREIGNTY_STRATEGY.md  SOVEREIGN_RUNTIME.md  palantir_sovereignty_brief.md  palantir_sovereignty_operator_guide.md  pantheon_o7.md  pre_aip_preparation.md  sovereignty_anthem.md  sovereignty_subagent_prompt.md  sovereignty_variants.md  starship_to_mars.md
src/tether/: __init__.py
src/tether/audit/: __init__.py
src/tether/auth/: __init__.py  config.toml  credentials.py  provider.py
src/tether/cli/: __init__.py  main.py
src/tether/core/: __init__.py  prompt.py
src/tether/crisis/: __init__.py  resources.py
src/tether/grounding/: __init__.py  exercises.py
src/tether/redteam/: __init__.py  harness.py
src/tether/redteam/characters/: ai_is_conscious.txt  digital_resurrection.txt  messianic_mission.txt  romantic_merger.txt  simulation_key.txt
src/tether/redteam/results/: ai_is_conscious_20260515_1126.json  ai_is_conscious_20260515_1126.md  digital_resurrection_20260515_1126.json  digital_resurrection_20260515_1126.md  messianic_mission_20260515_1126.json  messianic_mission_20260515_1126.md  romantic_merger_20260515_1126.json  (+3 more)
src/tether/web/: __init__.py  app.py  gradio_app.py  server.py
src/tether/zero/: __init__.py  compiler.py  runner.py  verifier.py
(+4 files in other folders)
