[project]
name = "tether"
version = "0.1.0"
description = "A local-first, anti-sycophantic reality tethering tool for people struggling to distinguish AI validation from reality."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tether Contributors"}
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ollama = [
    "ollama>=0.3.0",
]
litellm = [
    "litellm>=1.40.0",
]
web = [
    "gradio>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
tether = "tether.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tether"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]